--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -15,7 +15,7 @@ $whiteFaded: rgba($white, 0.7);
 $gray: #7A868F;
 $grayDark: #62646F;
 $grayLight: #EAEAED;
-$grayLightest: #F4F8FA;
+$grayLightest: #F2F4F5;
 $grayBorder: #D2D2DE;
 
 // Links
