--- a/src/components/Navbar/Styles.module.scss
+++ b/src/components/Navbar/Styles.module.scss
@@ -28,8 +28,6 @@
   height: 50px;
 }
 
-
-
 .navList {
   padding: 0;
   margin: 0;
@@ -42,7 +40,7 @@
 }
 
 .navItem {
-  margin-left: 30px;
+
   @include links-on-dark;
   @include font-size($text-small);
   a {
@@ -50,6 +48,9 @@
   }
   &:first-child {
     margin-left: 0;
+  }
+  @include mq('tablet') {
+    margin-left: 30px;
   }
 }
 
