--- a/src/pages/blog/blog.module.scss
+++ b/src/pages/blog/blog.module.scss
@@ -5,6 +5,7 @@
 
 .container {
   box-sizing: border-box;
+  @include page-top;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -29,23 +30,21 @@
 
 .contentItemsContainer {
   width: 100%;
-  background: $greenLight;
   @include pad-bot-large;
 }
 
 
 .contentItems {
   justify-content: space-between;
+
   width: 100%;
   margin-bottom: 40px;
-  margin-top: -20px;
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr;
   @include mq('tablet') {
     grid-gap: 40px;
     grid-template-columns: 1fr 1fr;
-    margin-top: -100px;
     position: relative;
     z-index: 2;
   }
