--- a/src/components/SpreadMessageCTA/styles.module.scss
+++ b/src/components/SpreadMessageCTA/styles.module.scss
@@ -1,6 +1,8 @@
 .container {
   background-color: #00b364;
-  width: 100%;
+  padding: 5%;
   height: max-content;
   color: #ffffff;
+  display: flex;
+  justify-content: space-between;
 }
