--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -12,11 +12,11 @@ $greenLight: #D7F3E7;
 
 $whiteFaded: rgba($white, 0.7);
 
-$gray: #7A868F;
+$gray: #616771;
 $grayDark: #62646F;
 $grayLight: #EAEAED;
 $grayLightest: #F2F4F5;
-$grayBorder: #D2D2DE;
+$grayBorder: #DDE0E5;
 
 // Links
 $link: $blue;
