--- a/src/components/SpreadMessageCTA/styles.module.scss
+++ b/src/components/SpreadMessageCTA/styles.module.scss
@@ -1,8 +1,46 @@
+@import "../../styles/Variables.module.scss";
+@import "../../styles/Typography.module.scss";
+
 .container {
   background-color: #00b364;
-  padding: 5%;
-  height: max-content;
+  height: 300px;
   color: #ffffff;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 2em;
+}
+
+.ctaCopy {
+  margin: 2em;
+}
+
+.title {
+  @include font-size($title-large);
+  font-family: $serif;
+  line-height: 80px !important;
+}
+
+.copy {
+  text-align: justify;
+  line-height: 1.5em;
+  color: #ffffff;
+}
+
+.socialBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+  color: #0d1626;
+  max-width: 50%;
+  margin: 1em;
+  text-align: "justify";
+  padding: 1.5em 0;
+}
+
+.socialBlock .subTitle {
+  font-weight: 600;
+  font-size: 24px;
+  max-width: 80%;
 }
