--- a/src/components/SocialButton/style.module.scss
+++ b/src/components/SocialButton/style.module.scss
@@ -12,9 +12,7 @@
   align-items: center;
   justify-content: flex-start;
   margin-top: 0.5em;
-}
-.button:hover {
-  // TODO
+  color: $black;
 }
 
 .logo {
