add a notification for copied to clipboard

--- a/src/components/SpreadMessageCTA/styles.module.scss
+++ b/src/components/SpreadMessageCTA/styles.module.scss
@@ -3,6 +3,7 @@
 @import "../../styles/Mixins.module.scss";
 
 .container {
+  position: relative;
   background-color: $green;
   height: min-content;
   color: $white;
