creating new components for each button
as they need to be able to control their own logic

--- a/src/components/Notification/styles.module.scss
+++ b/src/components/Notification/styles.module.scss
@@ -5,7 +5,7 @@
   height: max-content;
   background-color: $black;
   padding: 0.3em;
-  color: $white;
+  color: $white !important;
   border-radius: 10px;
 }
 
