separate components for each button

--- a/src/components/SocialButton/styles.module.scss
+++ b/src/components/SocialButton/styles.module.scss
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin-top: 0.5em;
+  margin: 0.3em 0.5em;
   color: $black;
 }
 
