--- a/src/components/SpreadMessageCTA/styles.module.scss
+++ b/src/components/SpreadMessageCTA/styles.module.scss
@@ -49,11 +49,13 @@
   color: $black;
   width: 90%;
   padding: 1em 0;
+  margin-bottom: 2em;
 
   @include mq("desktop") {
     padding: 2em 0;
     width: 100%;
     text-align: "justify";
+    margin-bottom: 0;
   }
 }
 
