fitting social component into existing site width, small style tweaks

--- a/src/components/AuthorCard/Styles.module.scss
+++ b/src/components/AuthorCard/Styles.module.scss
@@ -7,7 +7,7 @@
 
 .authorCard {
   background: $grayLight;
-  border-radius: $border-radius;
+  border-radius: $borderRadius;
   display: flex;
   padding: 5%;
   width:90%;
