some file tidyups

--- a/src/components/SocialButtons/styles.module.scss
+++ b/src/components/SocialButtons/styles.module.scss
@@ -1,4 +1,5 @@
 @import "../../styles/Variables.module.scss";
+@import "../../styles/Typography.module.scss";
 @import "../../styles/Mixins.module.scss";
 
 .button {
