--- a/src/styles/Typography.module.scss
+++ b/src/styles/Typography.module.scss
@@ -1,9 +1,10 @@
 @import './Variables.module.scss';
 @import './Mixins.module.scss';
 
+
 // Fonts
-$serif: 'Lora', serif;
-$sans: 'Libre Franklin', sans-serif;
+$serif: 'ITC Napoleone Slab W01', serif;
+$sans: 'Univers Next W01', sans-serif;
 
 // Responsive Typography Resizer
 
