--- a/src/styles/Choice.module.scss
+++ b/src/styles/Choice.module.scss
@@ -20,3 +20,16 @@
   @include mq('tablet') {
   }
 }
+
+.bannerContent {}
+
+
+.bannerTitle {
+  color: $orange;
+}
+
+.bannerDesc {}
+.bannerActions {}
+.bannerCtaPrimary {}
+.bannerCtaSecondary {}
+.bannerImg {}
