building home banner

--- a/src/components/HomeIntro/Styles.module.scss
+++ b/src/components/HomeIntro/Styles.module.scss
@@ -15,21 +15,22 @@
 .inner {
   @include pad-top-standard;
   @include pad-bot-standard;
+  @include mar-bot-small;
   justify-content: space-between;
-  align-items: center;
   flex-direction: column;
   @include mq('tablet') {
-
+    flex-direction: row;
   }
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  text-align: center;
-  margin: 0 auto;
+  width: 100%;
+  @include mq('tablet') {
+    max-width: 640px;
+  }
 }
 
 .title {
@@ -38,6 +39,10 @@
   font-weight: 700;
   font-family: $serif;
   color: $white;
+  text-align: center;
+  @include mq('tablet') {
+    text-align: left;
+  }
 }
 
 .titleEmphasis {
@@ -45,21 +50,41 @@
   color: $orange;
 }
 
-
-.ctaButton {
+.ctas {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
   margin-top: 30px;
+  @include mq('tablet') {
+    margin-top: 40px;
+    flex-direction: row;
+  }
+}
+
+.ctaPrimary {
   @include no-underline;
 }
 
 .ctaSecondary {
   @include links-on-light;
-  color: $white;
   @include font-size($text-xsmall);
-  @include mar-top-small;
-  padding-top: 15px;
+  margin-top: 30px;
   a {
     color: $white;
     font-weight: normal;
+    font-size: 21px;
+  }
+  @include mq('tablet') {
+    margin-top: 4px;
+    flex-direction: row;
   }
 }
 
+.img {
+  margin-top: 30px;
+  @include mq('tablet') {
+    margin-top: 0;
+  } 
+}
