styling choice banner

--- a/src/components/HomeIntro/Styles.module.scss
+++ b/src/components/HomeIntro/Styles.module.scss
@@ -65,6 +65,10 @@
 
 .ctaPrimary {
   @include no-underline;
+  width: 100%;
+  @include mq('tablet') {
+    width: auto;
+  }
 }
 
 .ctaSecondary {
