--- a/src/styles/Buttons.module.scss
+++ b/src/styles/Buttons.module.scss
@@ -4,6 +4,7 @@
 
 .btn-default {
   color: #fff;
+  
 }
 .btn-primary,
 .btn,
@@ -70,6 +71,7 @@
 /* Buttons */
 .btn-simple,
 .btn-gradient {
+  
   margin: 0;
   padding: 0;
   border-width: 2px;
@@ -113,7 +115,7 @@
 .btn-simple.btn-md,
 .btn-gradient.btn-md {
   font-size: 21px;
-  padding: 15px 30px 15px;
+  padding: 17px 30px ;
   font-family: inherit;
 
 }
