--- a/src/components/Notification/styles.module.scss
+++ b/src/components/Notification/styles.module.scss
@@ -1,7 +1,7 @@
 @import "../../styles/Variables.module.scss";
 
 .notification {
-  width: max-content;
+  width: max-content !important;
   height: max-content;
   background-color: $black;
   padding: 0.3em;
@@ -11,7 +11,7 @@
 
 #notificationslide {
   position: absolute;
-  top: -10px;
+  top: 0px;
   right: 0px;
 
   -webkit-animation: notificationslide 0.7s forwards;
@@ -20,12 +20,12 @@
 
 @-webkit-keyframes notificationslide {
   100% {
-    right: 40px;
+    right: 45px;
   }
 }
 
 @keyframes notificationslide {
   100% {
-    right: 40px;
+    right: 45px;
   }
 }
