--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -3,6 +3,7 @@
 @import "../../styles/Mixins.module.scss";
 
 .container {
+  position: relative;
   background: $green;
   @include pad-top-standard;
   @include pad-bot-standard;
@@ -17,16 +18,15 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  @include mq('tablet') {
+  @include mq("tablet") {
     flex-direction: row;
   }
 }
 
 .ctaCopy {
   width: 100%;
-  @include mq('tablet') {
+  @include mq("tablet") {
     width: 40%;
-
   }
 }
 
