--- a/src/styles/Choice.module.scss
+++ b/src/styles/Choice.module.scss
@@ -93,3 +93,61 @@
 }
 
 /* How it happens */
+
+.how {}
+
+.howInner {
+  @include pad-top-standard;
+  @include pad-bot-standard;
+  justify-content: space-between;
+  flex-direction: column;
+  @include mq('tablet') {
+    flex-direction: row;
+  }
+}
+
+
+.howContent {
+  width: 100%;
+  @include mq('tablet') {
+    width: 50%;
+  }
+}
+
+.howTitle {
+  margin-top: 0;
+  @include font-size($title-large);
+}
+
+.choiceList {}
+
+.howList {}
+
+.choiceList {
+  @include text-small;
+  list-style: none; 
+  counter-reset: li;
+  padding: 0 0 0 40px;
+  :before {content: counter(li); 
+    color: $blue;
+    background: $blueLight;
+    font-weight: bold;
+    display: inline-block; 
+    width: 30px;
+    margin-left: -2.8em;
+    margin-right: 1em; 
+    text-align: center; 
+    direction: rtl
+  }
+  li {
+    counter-increment: li;
+    padding: 0 5px 30px;
+    margin: 0;
+    &:last-child {
+      padding-bottom: 0;
+    }
+  }
+  @include mq('tablet') {
+    padding-left: 43px;
+  }
+}
