--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -9,6 +9,7 @@ $pink: #F281AC;
 $yellow: #EFAF4B;
 $yellowLight: #FFE1B2;
 $greenLight: #D7F3E7;
+$blueLight: #E9EFFA;
 
 $whiteFaded: rgba($white, 0.7);
 
@@ -25,7 +26,7 @@ $linkActive: darken($orange, 7.5%);
 
 // Specific Usage
 
-$textBody: $gray;
+$textBody: $black;
 
 
 
