styling what you can do now section

--- a/src/styles/Choice.module.scss
+++ b/src/styles/Choice.module.scss
@@ -41,7 +41,7 @@
   margin: 0;
   font-weight: 700;
   font-family: $serif;
-  color: $orange;
+  color: $orangeOnDark;
   text-align: center;
   @include mq('tablet') {
     text-align: left;
@@ -159,7 +159,6 @@
 }
 
 .stopsInner {
-
   justify-content: space-between;
   flex-direction: column;
   @include mq('tablet') {
@@ -178,7 +177,9 @@
 }
 
 .stopsListContainer {
-  @include pad-left-standard;
+  @include mq('tablet') {
+    @include pad-left-standard;
+  }
 }
 
 .stopsList {
@@ -203,11 +204,128 @@
 .stopsImg {
   width: 100%;
   height: 240px;
-  background: url('../../static/images/Photos/stopsEat.jpg') no-repeat center;
+  background: url('../../static/images/Photos/stopsEat.jpg') no-repeat top center;
   background-size: cover;
   display: block;
+  @include mar-top-standard;
   @include mq('tablet') {
+    margin: 0;
     width: 50%;
     height: auto;
+  }
+}
+
+/* What youc an do now */
+
+.actions {}
+
+.actionsInner {
+  @include pad-top-standard;
+
+  justify-content: space-between;
+  flex-direction: column;
+  @include mq('tablet') {
+    padding-bottom: 0;
+  }
+}
+
+
+.actionsContent {
+  width: 100%;
+  @include mq('tablet') {
+
+  }
+}
+
+.actionsTitle {
+  margin-top: 0;
+  text-align: center;
+  @include mq('tablet') {
+    padding-bottom:15px;
+  }
+}
+
+.action {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  @include pad-bot-standard;
+  @include mq('tablet') {
+    flex-direction: row;
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+}
+.actionAnother {
+  border-top: 1px solid $grayBorder;
+  @include pad-top-standard;
+}
+
+.actionContent {
+  width: 100%;
+  @include mq('tablet') {
+    width: 56%;
+  }
+}
+.actionTitle {
+  margin-top: 0;
+}
+
+.actionHowTitle {
+  @include font-size($text-large);
+  color: $orange;
+  margin: 20px 0 0;
+  display: flex;
+  align-items: center;
+  img {
+    padding-right: 7px;
+  }
+  @include mq('tablet') {
+    margin: 30px 0 0;
+  }
+}
+
+.actionDesc {
+  @include font-size($text-small);
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.actionAside {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background: $blueLight;
+  margin-top: 20px;
+  @include mq('tablet') {
+    margin-top: 5px;
+    width: 35%;
+  }
+}
+.actionAsideTitle {
+  @include title-uppercase-small; 
+}
+
+.actionAsideContainer {
+  padding: 20px 20px;
+  @include mq('tablet') {
+    padding: 25px 30px;
+  }
+}
+
+.actionAsideList {
+  width: auto;
+  margin: 13px 0 0 0;
+  @include links-on-light;
+  list-style-type: none;
+  padding: 0;
+  li {
+    @include font-size($text-small);
+    padding-bottom: 17px;
+    &:last-child {
+      padding-bottom: 0;
+    }
   }
 }
