--- a/src/styles/Variables.module.scss
+++ b/src/styles/Variables.module.scss
@@ -2,7 +2,9 @@
 /* Colors */
 $black: #0D1626;
 $white: #FFFFFF;
-$orange: #DC8C01;
+$orangeOnDark: #DC8C01;
+$orange: #CF8300;
+
 $blue: #396ABF;
 $green: #00B364;
 $pink: #F281AC;
