--- a/src/components/FooterCta/Styles.module.scss
+++ b/src/components/FooterCta/Styles.module.scss
@@ -23,7 +23,7 @@
   width: 100%;
   margin-bottom: 10px;
   @include mq('tablet') {
-    width: 490px;
+    width: 450px;
     margin-bottom: 0;
   }
 }
@@ -31,9 +31,10 @@
 .ctaTitle {
   @include font-size($title-large);
   color: $white;
+  margin-top: 0;
   margin-bottom: 5px;
   @include mq('tablet') {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 }
 
@@ -48,7 +49,6 @@
 .ctaActions {
   display: flex;
   flex-direction: column;
-  @include mar-top-small;
   padding-top: 5px;
   @include mq('tablet') {
     flex-direction: row;
@@ -58,7 +58,7 @@
 
 .ctaButton {
   @include no-underline;
-  margin-top: 10px;
+  margin-top: 5px;
     @include mq('tablet') {
       margin-right: 20px;
       &:last-child {
