--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -23,7 +23,7 @@
 
 body {
   margin: 0;
-  font-family: 'Univers Next W01', sans-serif;
+  font-family: 'Neue Frutiger W15', sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
