--- a/src/components/ShareSocialCta/Styles.module.scss
+++ b/src/components/ShareSocialCta/Styles.module.scss
@@ -25,8 +25,10 @@
 
 .ctaCopy {
   width: 100%;
+  margin-bottom: 20px;
   @include mq('tablet') {
     width: 38%;
+    margin-bottom: 0;
   }
 }
 
