--- a/src/components/HomeIntro/Styles.module.scss
+++ b/src/components/HomeIntro/Styles.module.scss
@@ -1,10 +1,9 @@
-@import '../../styles/Variables.module.scss';
-@import '../../styles/Mixins.module.scss';
-@import '../../styles/Typography.module.scss';
-
+@import "../../styles/Variables.module.scss";
+@import "../../styles/Mixins.module.scss";
+@import "../../styles/Typography.module.scss";
 
 .container {
-  background-image: linear-gradient(270deg, #2A4270 21%, #16243E 62%);
+  background-image: linear-gradient(270deg, #2a4270 21%, #16243e 62%);
   box-sizing: border-box;
   width: 100%;
   display: flex;
@@ -18,7 +17,7 @@
   @include mar-bot-small;
   justify-content: space-between;
   flex-direction: column;
-  @include mq('tablet') {
+  @include mq("tablet") {
     flex-direction: row;
   }
 }
@@ -28,7 +27,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  @include mq('tablet') {
+  @include mq("tablet") {
     max-width: 640px;
   }
 }
@@ -40,9 +39,13 @@
   font-family: $serif;
   color: $white;
   text-align: center;
-  @include mq('tablet') {
+  @include mq("tablet") {
     text-align: left;
   }
+}
+
+.typist {
+  display: inline-block;
 }
 
 .titleEmphasis {
@@ -57,7 +60,7 @@
   align-items: center;
   width: 100%;
   margin-top: 30px;
-  @include mq('tablet') {
+  @include mq("tablet") {
     margin-top: 40px;
     flex-direction: row;
   }
@@ -66,7 +69,7 @@
 .ctaPrimary {
   @include no-underline;
   width: 100%;
-  @include mq('tablet') {
+  @include mq("tablet") {
     width: auto;
   }
 }
@@ -78,7 +81,7 @@
   a {
     font-weight: normal;
   }
-  @include mq('tablet') {
+  @include mq("tablet") {
     margin-top: 0;
     flex-direction: row;
   }
@@ -86,7 +89,7 @@
 
 .img {
   margin-top: 30px;
-  @include mq('tablet') {
+  @include mq("tablet") {
     margin-top: 0;
-  } 
+  }
 }
